[Material][Mac] Fixed Bookmark Items Highlight Issues

Remove calls to setHighlighted: for MD bookmark items.
Ensure that the items aren't highlighted when they are not enabled

BUG=627722, 628187, 628204

Review-Url: https://codereview.chromium.org/2169623002
Cr-Commit-Position: refs/heads/master@{#407032}

Former-commit-id: 1078d2565c0bc53dd9ef982d246fd9ac3dd49309